ncp-features-example/2.1.4-ingress-rewrite/nginx-web-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-rewrite
  namespace: ncp-feature
  annotations:
        ingress.kubernetes.io/rewrite-target: "/"
  labels:
    feature: ingress-rewrite   
spec:
  rules:
  - host: ingress-rewrite.demo.corp.local
    http:
      paths:
      - path: "/tea/"
        backend:
          serviceName: nginx-ingress-rewrite
          servicePort: 80
